--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>E-Library</title>
+    {% block headermeta %}
+    {% endblock %}
 </head>
 <body class="h-100 d-flex flex-column">
     <header>
@@ -13,18 +16,14 @@
                 <div>
                     <a href="{{ url_for('index') }}"><img style="height: 50px" src="{{ url_for('static', filename='image/ebook-logo.png') }}" alt="Logo"></a>
                     <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('index') }}">Главная</a>
-                    {% if current_user.is_authenticated %}
-                    <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('reviews') }}">Мои рецензии</a>
-                    {% endif %}
                 </div>
-                <div>
+                <div class="d-flex">
                     {% if current_user.is_authenticated %}
                     <div class="col align-self-end mx-3">
                         <p class="text-white text-end">
                             Аккаунт:
                             {{ current_user.last_name }}
                             {{ current_user.first_name }}
-                            {{ current_user.middle_name }}
                         </p>
                     </div>
                     <a class="btn text-white border-white p-3 nav-link btn-lg align-top" href="{{ url_for('auth.logout') }}">Выйти</a>
@@ -44,7 +43,7 @@
         {% endwith %}
     </div>
 
-    <main class="d-flex flex-grow-1">
+    <main class="d-flex justify-content-center flex-grow-1" style="background-image: url( {{ url_for('static', filename='image/lib-bg.jpg') }} );background-size:cover;">
         {% block main %}
         {% endblock %}
     </main>
@@ -53,5 +52,7 @@
         <p class="text-white">E-library, разработчик: Жаков Роман, 211-351</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    {% block footermeta %}
+    {% endblock %}
 </body>
 </html>
