--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,10 +16,13 @@
                 <div>
                     <a href="{{ url_for('index') }}"><img style="height: 50px" src="{{ url_for('static', filename='image/ebook-logo.png') }}" alt="Logo"></a>
                     <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('index') }}">Главная</a>
+                    {% if not g.check_user_status and current_user.role_id == 3 %}
+                    <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('books.create') }}">Добавить книгу</a>
+                    {% endif %}
                 </div>
                 <div class="d-flex">
                     {% if current_user.is_authenticated %}
-                    <div class="col align-self-end mx-3">
+                    <div class="col align-self-center mx-3">
                         <p class="text-white text-end">
                             Аккаунт:
                             {{ current_user.last_name }}
