--- a/app/templates/book_view.html
+++ b/app/templates/book_view.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="container">
+<div class="container" style="background-color: rgba(208, 212, 216, 0.8);">
 
     <h2 class="my-3 text-center text-uppercase font-weight-bold">Информация о книге</h2>
 
@@ -22,39 +22,52 @@
             <p>Год издания</p>
             <h4>{{ book.year }}</h4>
         </div>
+        <div class="year-col flex-column">
+            <p>Количество страниц</p>
+            <h4>{{ book.pages }}</h4>
+        </div>
     </div>
     <div class="info_row d-flex justify-content-center gap-5 mt-5">
-        <div class="cover-col col-6 flex-column">
+        <div class="cover-col col-5 flex-column">
             <img src="{{ cover_url }}" alt="Cover" class="border rounded-2" style="max-width:100%;object-fit:cover">
         </div>
-        <div class="desc-col col-6 flex-column">
+        <div class="desc-col col-5 flex-column">
             <h4>Описание книги</h4>
             {{ description|safe }}
         </div>
     </div>
-    <div class="info_row d-flex justify-content-between">
-        <div class="d-flex genres-row flex-row text-center gap-3 mt-3">
+    <div class="info_row d-flex justify-content-center align-items-center gap-3 text-center mt-3">
+        <div class="d-flex genres-row flex-row gap-3 mt-3 col-5 flex-wrap">
             <h4>Жанры: </h4>
             {% for g in genres %}
             <div class="bg-dark p-2 text-white border rounded-2">{{ g.name }}</div>
             {% endfor %}
         </div>
-        <div class="rating-row d-flex flex-column">
-            <h4>Рейтинг: {{ book.get_rating() }}/5 ( всего отзывов: {{ book.rating_amount }} )</h4>
+        <div class="rating-row d-flex flex-column col-5">
+            <h4>Рейтинг: {{ book.get_rating() }}/5 &#9733; (всего отзывов: {{ book.rating_amount }})</h4>
         </div>
     </div>
+    <div class="justify-content-end d-flex mb-3 gap-2">
+        {% if access_level >= 2 %}
+        <a href="{{ url_for('books.edit', book_id=book.id) }}" class="btn btn-dark">Редактировать</a>
+        {% endif %}
+        {% if access_level == 3 %}
+        <a href="" class="btn btn-danger" data-url="{{ url_for('books.delete', book_id=book.id) }}" data-bs-toggle="modal"
+        data-bs-target="#deleteModal" data-name="{{ book.name }}">Удалить</a>
+        {% endif %}
+    </div>
 
-    {% if current_user.is_authenticated and user_review %}
+    {% if user_review %}
     <div class="rev_col d-flex flex-column border mt-5 mb-5">
         <h4 class="p-3">Ваш отзыв:</h4>
         <div class="border w-100 p-3" style="min-height: 100px;">
             {{user_review.text|safe}}
         </div>
         <div class="border w-100 p-3">
-            Оценка: {{ user_review.rating }}/5
+            Оценка: {{ user_review.rating }}/5 &#9733;
         </div>
     </div>
-    {% else %}
+    {% elif not is_anonimous() %}
     <div class="rev_row d-flex mb-4">
         <form method="POST" class="flex-grow-1 col-6">
             <div class="mb-3 mt-3 d-flex flex-column">
@@ -77,19 +90,21 @@
             </div>
         </form>
     </div>
+    {% else %}
+    <h4 class="mt-5"><a href="{{ url_for('auth.login') }}">Авторизуйтесь</a>, чтобы оставить свой отзыв</h4>
     {% endif %}
 
     {% if reviews.__len__() == 0 %}
     <h4 class="mb-5">На данную книгу еще нет отзывов</h4>
     {% else %}
     {% for rev in reviews %}
-    <div class="rev_col d-flex flex-column border mt-5 mb-5">
+    <div class="rev_col d-flex flex-column border border-black mt-5 mb-5">
         <h5 class="p-3">Отзыв пользователя {{ rev.user }}:</h5>
-        <div class="border w-100 p-3" style="min-height: 100px;">
+        <div class="border-top border-bottom border-black w-100 p-3" style="min-height: 100px;">
             {{rev.text|safe}}
         </div>
         <div class="border w-100 p-3">
-            Оценка: {{ rev.rating }}/5
+            Оценка: {{ rev.rating }}/5 &#9733;
         </div>
     </div>
     {% endfor %}
@@ -101,3 +116,5 @@
 <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 <script>const easyMDE = new EasyMDE();</script>
 {% endblock %}
+
+{% include 'delete_modal.html' %}
