--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,47 +44,17 @@
         <div class="justify-content-end d-flex mb-3 gap-2">
             <a href="{{ url_for('books.view', book_id=book.id) }}" class="btn btn-dark">Просмотреть</a>
             {% if access_level >= 2 %}
-            <a href="" class="btn btn-dark">Редактировать</a>
+            <a href="{{ url_for('books.edit', book_id=book.id) }}" class="btn btn-dark">Редактировать</a>
             {% endif %}
             {% if access_level == 3 %}
-            <a href="" class="btn btn-danger">Удалить</a>
+            <a href="" class="btn btn-danger" data-url="{{ url_for('books.delete', book_id=book.id) }}" data-bs-toggle="modal"
+            data-bs-target="#deleteModal" data-name="{{ book.name }}">Удалить</a>
             {% endif %}
         </div>
         {% endfor %}
 
     </div>
-    {% if access_level == 3 %}
-    <div class="text-center my-3">
-        <a class="btn btn-lg btn-secondary" href="{{ url_for('books.create') }}">Добавить новую книгу</a>
-    </div>
-    {% endif %}
 </div>
-
-<!-- {% if current_user.is_authenticated %}
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Удаление книги</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Вы уверены, что хотите удалить книгу
-                "<span class="delete-title"></span>"
-                ?
-                <form action="" class="d-none" method="POST">
-                    <input type="submit" id="submit-delete">
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
-                <label for="submit-delete" class="btn btn-danger mb-0">Удалить</label>
-            </div>
-        </div>
-    </div>
-</div>
-{%endif%} -->
-
-<!-- <script src="{{ url_for('static', filename='delete.js')}}"></script> -->
-
 {% endblock %}
+
+{% include 'delete_modal.html' %}
