--- a/app/templates/book_create.html
+++ b/app/templates/book_create.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="container">
+<div class="container text-white">
     <h2 class="my-3 text-center text-uppercase font-weight-bold">Добавление новой книги</h2>
 
     <form action="{{ url_for('books.create') }}" method="POST" enctype="multipart/form-data">
