fix: correct usage of flask-login.current_user

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -16,7 +16,7 @@
                 <div>
                     <a href="{{ url_for('index') }}"><img style="height: 50px" src="{{ url_for('static', filename='image/ebook-logo.png') }}" alt="Logo"></a>
                     <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('index') }}">Главная</a>
-                    {% if not g.check_user_status and current_user.role_id == 3 %}
+                    {% if current_user.is_authenticated and current_user.access_level >= access_level_map['administrator'] %}
                     <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('books.create') }}">Добавить книгу</a>
                     {% endif %}
                 </div>
