--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -25,8 +25,7 @@
                     <div class="col align-self-center mx-3">
                         <p class="text-white text-end">
                             Аккаунт:
-                            {{ current_user.last_name }}
-                            {{ current_user.first_name }}
+                            {{ current_user.login }}
                         </p>
                     </div>
                     <a class="btn text-white border-white p-3 nav-link btn-lg align-top" href="{{ url_for('auth.logout') }}">Выйти</a>
@@ -52,7 +51,7 @@
     </main>
 
     <footer class="footer mt-auto pt-3 d-flex align-items-center justify-content-center bg-dark">
-        <p class="text-white">E-library, разработчик: Жаков Роман, 211-351</p>
+        <p class="text-white">E-cinema</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     {% block footermeta %}
