--- a/application/templates/title/view.html
+++ b/application/templates/title/view.html
@@ -7,54 +7,59 @@
 {% block main %}
 <div class="container" style="background-color: rgba(208, 212, 216, 0.8);">
 
-    <h2 class="my-3 text-center text-uppercase font-weight-bold">Информация о книге</h2>
+    <h2 class="my-3 text-center text-uppercase font-weight-bold">Информация</h2>
 
     <div class="info_row d-flex justify-content-center gap-5">
         <div class="name-col flex-column">
-            <p>Название книги</p>
-            <h4>{{ book.name }}</h4>
+            <h4>{{ media.name }}</h4>
         </div>
+        <div class="year-col flex-column">
+            <p>Год выпуска</p>
+            <h4>{{ media.year }}</h4>
+        </div>
+        {% if media.publisher %}
         <div class="pub-col flex-column">
-            <p>Издательство</p>
-            <h4>{{ book.publisher }}</h4>
+            <p>Студия</p>
+            <h4>{{ media.publisher }}</h4>
         </div>
+        {% endif %}
+        {% if media.age_rate %}
         <div class="year-col flex-column">
-            <p>Год издания</p>
-            <h4>{{ book.year }}</h4>
+            <p>Возраст</p>
+            <h4>{{ media.age_rate }}</h4>
         </div>
+        {% endif %}
+        {% if media.country %}
         <div class="year-col flex-column">
-            <p>Количество страниц</p>
-            <h4>{{ book.pages }}</h4>
+            <p>Страна</p>
+            <h4>{{ media.country.name }}</h4>
         </div>
+        {% endif %}
     </div>
     <div class="info_row d-flex justify-content-center gap-5 mt-5">
         <div class="cover-col col-5 flex-column">
             <img src="{{ cover_url }}" alt="Cover" class="border rounded-2" style="max-width:100%;object-fit:cover">
         </div>
         <div class="desc-col col-5 flex-column">
-            <h4>Описание книги</h4>
+            <h4>Описание</h4>
             {{ description|safe }}
         </div>
     </div>
     <div class="info_row d-flex justify-content-center align-items-center gap-3 text-center mt-3">
         <div class="d-flex genres-row flex-row gap-3 mt-3 col-5 flex-wrap">
             <h4>Жанры: </h4>
-            {% for g in genres %}
+            {% for g in media.genres %}
             <div class="bg-dark p-2 text-white border rounded-2">{{ g.name }}</div>
             {% endfor %}
         </div>
         <div class="rating-row d-flex flex-column col-5">
-            <h4>Рейтинг: {{ book.get_rating() }}/5 &#9733; (всего отзывов: {{ book.rating_amount }})</h4>
+            <h4>Рейтинг: {{ media.get_rating() }}/5 &#9733; (всего отзывов: {{ media.rating_amount }})</h4>
         </div>
     </div>
     <div class="justify-content-end d-flex mb-3 gap-2">
         {% if current_user.is_authenticated %}
-        {% if current_user.access_level >= access_level_map['moderator'] %}
-        <a href="{{ url_for('books.edit', book_id=book.id) }}" class="btn btn-dark">Редактировать</a>
-        {% endif %}
-        {% if current_user.access_level >= access_level_map['administrator'] %}
-        <a href="" class="btn btn-danger" data-url="{{ url_for('books.delete', book_id=book.id) }}" data-bs-toggle="modal"
-        data-bs-target="#deleteModal" data-name="{{ book.name }}">Удалить</a>
+        {% if current_user.has_access('moderator') %}
+        <a href="{{ url_for('admin.title.view', media_id=media.media_id) }}" class="btn btn-dark">Управлять</a>
         {% endif %}
         {% endif %}
     </div>
@@ -63,7 +68,7 @@
     <div class="rev_col d-flex flex-column border mt-5 mb-5">
         <h4 class="p-3">Ваш отзыв:</h4>
         <div class="border w-100 p-3" style="min-height: 100px;">
-            {{user_review.text|safe}}
+            {{markdown(user_review.text)|safe}}
         </div>
         <div class="border w-100 p-3">
             Оценка: {{ user_review.rating }}/5 &#9733;
@@ -79,11 +84,11 @@
             <div class="mb-3 form-group col-6">
                 <label for="rating_select" class="fs-4">Оценка</label>
                 <select class="form-control" id="rating_select" name="rating_select">
-                    <option value="5">5/5 (Отлично)</option>
-                    <option value="4">4/5 (Хорошо)</option>
-                    <option value="3">3/5 (Удовлетворительно)</option>
-                    <option value="2">2/5 (Неудовлетворительно)</option>
-                    <option value="1">1/5 (Плохо)</option>
+                    <option value="5">5/5</option>
+                    <option value="4">4/5</option>
+                    <option value="3">3/5</option>
+                    <option value="2">2/5</option>
+                    <option value="1">1/5</option>
                 </select>
             </div>
             <div class="mb-3 text-center">
@@ -92,15 +97,15 @@
         </form>
     </div>
     {% else %}
-    <h4 class="mt-5"><a href="{{ url_for('auth.login') }}">Авторизуйтесь</a>, чтобы оставить свой отзыв</h4>
+    <h4 class="mt-5"><a href="{{ url_for('auth.login', next=request.endpoint) }}">Авторизуйтесь</a>, чтобы оставить свой отзыв</h4>
     {% endif %}
 
     {% if reviews.__len__() == 0 %}
-    <h4 class="mb-5">На данную книгу еще нет отзывов</h4>
+    <h4 class="mb-5">Отзывов еще нет. Оставьте свой отзыв первым!</h4>
     {% else %}
     {% for rev in reviews %}
     <div class="rev_col d-flex flex-column border border-black mt-5 mb-5">
-        <h5 class="p-3">Отзыв пользователя {{ rev.user }}:</h5>
+        <h5 class="p-3">{{ rev.user }}:</h5>
         <div class="border-top border-bottom border-black w-100 p-3" style="min-height: 100px;">
             {{rev.text|safe}}
         </div>
@@ -117,5 +122,3 @@
 <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 <script>const easyMDE = new EasyMDE();</script>
 {% endblock %}
-
-{% include 'delete_modal.html' %}
