--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>E-Library</title>
+    <title>E-cinema</title>
     {% block headermeta %}
     {% endblock %}
 </head>
@@ -16,8 +16,8 @@
                 <div>
                     <a href="{{ url_for('index') }}"><img style="height: 50px" src="{{ url_for('static', filename='image/ebook-logo.png') }}" alt="Logo"></a>
                     <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('index') }}">Главная</a>
-                    {% if current_user.is_authenticated and current_user.access_level >= access_level_map['administrator'] %}
-                    <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('media.create') }}">Добавить книгу</a>
+                    {% if current_user.is_authenticated and current_user.has_access('moderator') %}
+                    <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('admin.index') }}">Управлять</a>
                     {% endif %}
                 </div>
                 <div class="d-flex">
