--- a/application/templates/components/modal/title_delete_modal.html
+++ b/application/templates/components/modal/title_delete_modal.html
@@ -10,6 +10,8 @@
                 Вы уверены, что хотите удалить книгу
                 "<span class="delete-title"></span>"
                 ?
+                <input type="checkbox" name="delete-cover" id="delete-cover">
+                <label for="delete-cover">Delete title cover</label>
                 <form action="" class="d-none" method="POST">
                     <input type="submit" id="submit-delete">
                 </form>
