--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -5,3 +5,10 @@ p {
 .card {
     background-color: #bdbbbb;
 }
+
+.alert-block {
+    position: absolute;
+    width: 80%;
+    top: 70px;
+    z-index: 100;
+}
