--- a/application/templates/_formhelpers.html
+++ b/application/templates/_formhelpers.html
@@ -1,8 +1,8 @@
 {% macro render_field(field) %}
-    <dt>{{ field.label }}
+    <dt>{{ field.label }}</dt>
     <dd>{{ field(**kwargs) |safe }}
     {% if field.errors %}
-        <ul class=errors>
+        <ul class="errors">
         {% for error in field.errors %}
             <li>{{ error }}</li>
         {% endfor %}
