--- a/application/wsgi_app/templates/base.html
+++ b/application/wsgi_app/templates/base.html
@@ -16,12 +16,12 @@
                 <div>
                     <a href="{{ url_for('index') }}"><img style="height: 50px" src="{{ url_for('static', filename='image/ebook-logo.png') }}" alt="Logo"></a>
                     <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('index') }}">Главная</a>
-                    {% if current_user.is_authenticated and current_user.has_access('moderator') %}
+                    {% if current_user and current_user.has_access('moderator') %}
                     <a class="btn navbar-brand btn-lg text-white" href="{{ url_for('admin.index') }}">Управлять</a>
                     {% endif %}
                 </div>
                 <div class="d-flex">
-                    {% if current_user.is_authenticated %}
+                    {% if current_user %}
                     <div class="col align-self-center mx-3">
                         <p class="text-white text-end">
                             Аккаунт:
